[task] Implement new statistics service